# ucc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  ast.cpp  ast.h  enum_magic.hpp  gen.cpp  gen.h  lexer.cpp  lexer.h  lval.cpp  main.cpp  parser.cpp  parser.h  rc_gc.c  rc_gc.h  symtable.cpp  symtable.h  test.sh  type.cpp  type.h
.github/workflows/: cmake.yml
